downloaded all audios from the Bahnar language bible

--- a/bible_is/bible_is/spiders/download-audios.ipynb
+++ b/bible_is/bible_is/spiders/download-audios.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import requests\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "WORK_DIR = '/Users/khangnguyen/lab/bahnar_tts/bible'\n",
@@ -296,19 +296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "130"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 10,
+   "outputs": [],
    "source": [
     "NHATKHANG_BAH = [\n",
     "    \"https://content.cdn.dbp-prod.dbp4.org/audio/BDQDVS/BDQDVSN2DA/B01___01_Matthew_____BDQDVSN2DA.mp3?x-amz-transaction=149402&Expires=1679480021&Signature=QcHqYcU~7apAAQ1wduPbRQRMQC7p-Ndyd9NpsLG3IGZTv6loRsVjoPVp7K9dfF9U7UAh00w~earZWtNUojNqRFh7ERp6zherx6UHOfSl-gsgD5Z1whInuXf66hlbHrUxCbo6F1J1M-HepLDzxTWGFV-5ZRABPboloCaqa34hLGtPcYINhv15pvjykWJXgvnllzds2mlSzrLVnYYXtqK-LfSqfaqK477Ct6IXcXx-zzEFZXkaaFzWmOztJbPLV5Qayy1XO5RXU3-bvbyrMIyX30VDOAg9qUpE1AE3sbG6hiI91jhtCjgoxfpaYvjtGf4Tj3rph0PbiJcfp9eAo5RzhA__&Key-Pair-Id=APKAI4ULLVMANLYYPTLQ\",\n",
@@ -443,16 +432,6 @@
     "    \"https://content.cdn.dbp-prod.dbp4.org/audio/BDQDVS/BDQDVSN2DA/B06___14_Romans______BDQDVSN2DA.mp3?x-amz-transaction=5439054&Expires=1679498688&Signature=I3dOcsisYwRU5CjlAoRVob1sPY0Wfuvl6ZAGtDs9-XmCiyj450b-grjzzb4euxqD-FmxVJIPuOLeOllvY0AO7kjPg1ciyAzDM4VuOLU9XY-vUklRudGsnKLrPQenJ6D73RAc96gCgZ7-3sgx1jDOq~GKSm3QOdtdRYih3UT7H1rMQYO-WznShQw4UQ~L~~s9vq60f1-onM2h03--ntUhqJwiBDW805Q7EHK2uhfS-sujbF7B3Y2phSObPHTM2zCbWI8cOJGL5UaAjI8gxeteKwZyxVuVcCx3iLXbAr97XertGApOBjtH0xpCixUtCkpVwSN1PmTHVF46bdQUA2HODQ__&Key-Pair-Id=APKAI4ULLVMANLYYPTLQ\"\n",
     "]\n",
     "\n",
-    "len(NHATKHANG_BAH)"
-   ]
-    "    \"\",\n",
-    "    \"\",\n",
-    "    \"\",\n",
-    "    \"\",\n",
-    "    \"\",\n",
-    "    \"\",\n",
-    "    \"\",\n",
-    "]\n",
     "MANHKHANG_BAH = [\n",
     "    'https://content.cdn.dbp-prod.dbp4.org/audio/BDQDVS/BDQDVSN2DA/B06___14_Romans______BDQDVSN2DA.mp3?x-amz-transaction=5439054&Expires=1679498688&Signature=I3dOcsisYwRU5CjlAoRVob1sPY0Wfuvl6ZAGtDs9-XmCiyj450b-grjzzb4euxqD-FmxVJIPuOLeOllvY0AO7kjPg1ciyAzDM4VuOLU9XY-vUklRudGsnKLrPQenJ6D73RAc96gCgZ7-3sgx1jDOq~GKSm3QOdtdRYih3UT7H1rMQYO-WznShQw4UQ~L~~s9vq60f1-onM2h03--ntUhqJwiBDW805Q7EHK2uhfS-sujbF7B3Y2phSObPHTM2zCbWI8cOJGL5UaAjI8gxeteKwZyxVuVcCx3iLXbAr97XertGApOBjtH0xpCixUtCkpVwSN1PmTHVF46bdQUA2HODQ__&Key-Pair-Id=APKAI4ULLVMANLYYPTLQ',\n",
     "    'https://content.cdn.dbp-prod.dbp4.org/audio/BDQDVS/BDQDVSN2DA/B06___15_Romans______BDQDVSN2DA.mp3?x-amz-transaction=7254692&Expires=1679499130&Signature=eXzsLukyv0Gj89FspIBTqxltu-vh1wRvEbYRsad-0odK1K0eWzIh8zr1DWLnV0FNa9Jm7g2lqd7M9JKexl3pJ9HZuWp2OLUdLKTSSRFuy~WyOtcHBm3XPpMZR25yHEqUU5uOxWgQoTDdlczfJWQzgmkAzg9I3cDu8igMScoCmRAkLDarjulwyBIUI7jE1VmuQekt3h4Wgb1MwOyMt6WTbDsp07rq5kVwTVk5LjaDHDGL~iWb5N04oV1YMVF~WOqTBjI53ExAPo3UIaZEE6mgbIuhkFl1vSZ07XcvgWtqY8cTYqU-GKhL~yaAsYxTkaos62c2CgL3GebzBBtN6VBCrQ__&Key-Pair-Id=APKAI4ULLVMANLYYPTLQ',\n",
@@ -586,7 +565,7 @@
     "    'https://content.cdn.dbp-prod.dbp4.org/audio/BDQDVS/BDQDVSN2DA/B27___22_Revelation__BDQDVSN2DA.mp3?x-amz-transaction=5831554&Expires=1679533247&Signature=Ly5NYhjW1h9P7Yjmnt-NWdQBq-UjpQ2lcBGXl31228MYMlxWzfbkV1NTP27a16rBRh7wJFtustSY950FZtzLJFe6mpoO5wZ8k1Vf2N5XvXgrlasiSWXiIJYanvqt2FEi8lUR5vSf6ttZtnfUG6XEWt82uf1BIREZ11b1cAVh9zyTEmh3NtF7RYlvtpkTXqMGICzTcT4RIjdDO5KBPdEuoGAE3RDnDO4y5LFTuupkIvEU88MSHCFzkKaB5Zq3xC-YqArYQKAOa7E7Xh7sC8Mm65MFmdzI1GnkA1QPM1E3bTrzFHI6gFGIrUTnT8jXU8TcqHOfeHaPcZIJc8eKsPCjJw__&Key-Pair-Id=APKAI4ULLVMANLYYPTLQ'\n",
     " ]\n",
     "\n",
-    "AUDIO_SRCS = NHATKHANG_BAH + MANHKHANG_BAH\n"
+    "BAH_AUDIO_SRCS = NHATKHANG_BAH + MANHKHANG_BAH"
    ],
    "metadata": {
     "collapsed": false,
@@ -597,30 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "NHATKHANG_VIE = [\n",
-    "    \n",
-    "]\n",
-    "\n",
-    "len(NHATKHANG_VIE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not os.path.exists('audios'):\n",
-    "    os.makedirs('audios')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -628,36 +584,56 @@
    },
    "outputs": [
     {
-     "ename": "MissingSchema",
-     "evalue": "Invalid URL '': No scheme supplied. Perhaps you meant http://?",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mMissingSchema\u001B[0m                             Traceback (most recent call last)",
-      "\u001B[1;32me:\\SOFT\\General_Subjects\\artificial_intelligence\\colab-tts-Bahnar\\crawl-web\\bible_is\\bible_is\\spiders\\download-audios.ipynb Cell 3\u001B[0m in \u001B[0;36m<cell line: 2>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      <a href='vscode-notebook-cell:/e%3A/SOFT/General_Subjects/artificial_intelligence/colab-tts-Bahnar/crawl-web/bible_is/bible_is/spiders/download-audios.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001B[0m i \u001B[39m=\u001B[39m \u001B[39m1\u001B[39m\n\u001B[0;32m      <a href='vscode-notebook-cell:/e%3A/SOFT/General_Subjects/artificial_intelligence/colab-tts-Bahnar/crawl-web/bible_is/bible_is/spiders/download-audios.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001B[0m \u001B[39mfor\u001B[39;00m url \u001B[39min\u001B[39;00m NHATKHANG:\n\u001B[1;32m----> <a href='vscode-notebook-cell:/e%3A/SOFT/General_Subjects/artificial_intelligence/colab-tts-Bahnar/crawl-web/bible_is/bible_is/spiders/download-audios.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001B[0m     response \u001B[39m=\u001B[39m requests\u001B[39m.\u001B[39;49mget(url)\n\u001B[0;32m      <a href='vscode-notebook-cell:/e%3A/SOFT/General_Subjects/artificial_intelligence/colab-tts-Bahnar/crawl-web/bible_is/bible_is/spiders/download-audios.ipynb#W1sZmlsZQ%3D%3D?line=4'>5</a>\u001B[0m     \u001B[39m# Save the downloaded content to a file on disk\u001B[39;00m\n\u001B[0;32m      <a href='vscode-notebook-cell:/e%3A/SOFT/General_Subjects/artificial_intelligence/colab-tts-Bahnar/crawl-web/bible_is/bible_is/spiders/download-audios.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001B[0m     \u001B[39mwith\u001B[39;00m \u001B[39mopen\u001B[39m(\u001B[39mf\u001B[39m\u001B[39m\"\u001B[39m\u001B[39maudios/audio\u001B[39m\u001B[39m{\u001B[39;00mi\u001B[39m}\u001B[39;00m\u001B[39m.mp3\u001B[39m\u001B[39m\"\u001B[39m, \u001B[39m'\u001B[39m\u001B[39mwb\u001B[39m\u001B[39m'\u001B[39m) \u001B[39mas\u001B[39;00m f:\n",
-      "File \u001B[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\requests\\api.py:73\u001B[0m, in \u001B[0;36mget\u001B[1;34m(url, params, **kwargs)\u001B[0m\n\u001B[0;32m     62\u001B[0m \u001B[39mdef\u001B[39;00m \u001B[39mget\u001B[39m(url, params\u001B[39m=\u001B[39m\u001B[39mNone\u001B[39;00m, \u001B[39m*\u001B[39m\u001B[39m*\u001B[39mkwargs):\n\u001B[0;32m     63\u001B[0m     \u001B[39mr\u001B[39m\u001B[39m\"\"\"Sends a GET request.\u001B[39;00m\n\u001B[0;32m     64\u001B[0m \n\u001B[0;32m     65\u001B[0m \u001B[39m    :param url: URL for the new :class:`Request` object.\u001B[39;00m\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m     70\u001B[0m \u001B[39m    :rtype: requests.Response\u001B[39;00m\n\u001B[0;32m     71\u001B[0m \u001B[39m    \"\"\"\u001B[39;00m\n\u001B[1;32m---> 73\u001B[0m     \u001B[39mreturn\u001B[39;00m request(\u001B[39m\"\u001B[39m\u001B[39mget\u001B[39m\u001B[39m\"\u001B[39m, url, params\u001B[39m=\u001B[39mparams, \u001B[39m*\u001B[39m\u001B[39m*\u001B[39mkwargs)\n",
-      "File \u001B[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\requests\\api.py:59\u001B[0m, in \u001B[0;36mrequest\u001B[1;34m(method, url, **kwargs)\u001B[0m\n\u001B[0;32m     55\u001B[0m \u001B[39m# By using the 'with' statement we are sure the session is closed, thus we\u001B[39;00m\n\u001B[0;32m     56\u001B[0m \u001B[39m# avoid leaving sockets open which can trigger a ResourceWarning in some\u001B[39;00m\n\u001B[0;32m     57\u001B[0m \u001B[39m# cases, and look like a memory leak in others.\u001B[39;00m\n\u001B[0;32m     58\u001B[0m \u001B[39mwith\u001B[39;00m sessions\u001B[39m.\u001B[39mSession() \u001B[39mas\u001B[39;00m session:\n\u001B[1;32m---> 59\u001B[0m     \u001B[39mreturn\u001B[39;00m session\u001B[39m.\u001B[39mrequest(method\u001B[39m=\u001B[39mmethod, url\u001B[39m=\u001B[39murl, \u001B[39m*\u001B[39m\u001B[39m*\u001B[39mkwargs)\n",
-      "File \u001B[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\requests\\sessions.py:573\u001B[0m, in \u001B[0;36mSession.request\u001B[1;34m(self, method, url, params, data, headers, cookies, files, auth, timeout, allow_redirects, proxies, hooks, stream, verify, cert, json)\u001B[0m\n\u001B[0;32m    560\u001B[0m \u001B[39m# Create the Request.\u001B[39;00m\n\u001B[0;32m    561\u001B[0m req \u001B[39m=\u001B[39m Request(\n\u001B[0;32m    562\u001B[0m     method\u001B[39m=\u001B[39mmethod\u001B[39m.\u001B[39mupper(),\n\u001B[0;32m    563\u001B[0m     url\u001B[39m=\u001B[39murl,\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m    571\u001B[0m     hooks\u001B[39m=\u001B[39mhooks,\n\u001B[0;32m    572\u001B[0m )\n\u001B[1;32m--> 573\u001B[0m prep \u001B[39m=\u001B[39m \u001B[39mself\u001B[39;49m\u001B[39m.\u001B[39;49mprepare_request(req)\n\u001B[0;32m    575\u001B[0m proxies \u001B[39m=\u001B[39m proxies \u001B[39mor\u001B[39;00m {}\n\u001B[0;32m    577\u001B[0m settings \u001B[39m=\u001B[39m \u001B[39mself\u001B[39m\u001B[39m.\u001B[39mmerge_environment_settings(\n\u001B[0;32m    578\u001B[0m     prep\u001B[39m.\u001B[39murl, proxies, stream, verify, cert\n\u001B[0;32m    579\u001B[0m )\n",
-      "File \u001B[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\requests\\sessions.py:484\u001B[0m, in \u001B[0;36mSession.prepare_request\u001B[1;34m(self, request)\u001B[0m\n\u001B[0;32m    481\u001B[0m     auth \u001B[39m=\u001B[39m get_netrc_auth(request\u001B[39m.\u001B[39murl)\n\u001B[0;32m    483\u001B[0m p \u001B[39m=\u001B[39m PreparedRequest()\n\u001B[1;32m--> 484\u001B[0m p\u001B[39m.\u001B[39;49mprepare(\n\u001B[0;32m    485\u001B[0m     method\u001B[39m=\u001B[39;49mrequest\u001B[39m.\u001B[39;49mmethod\u001B[39m.\u001B[39;49mupper(),\n\u001B[0;32m    486\u001B[0m     url\u001B[39m=\u001B[39;49mrequest\u001B[39m.\u001B[39;49murl,\n\u001B[0;32m    487\u001B[0m     files\u001B[39m=\u001B[39;49mrequest\u001B[39m.\u001B[39;49mfiles,\n\u001B[0;32m    488\u001B[0m     data\u001B[39m=\u001B[39;49mrequest\u001B[39m.\u001B[39;49mdata,\n\u001B[0;32m    489\u001B[0m     json\u001B[39m=\u001B[39;49mrequest\u001B[39m.\u001B[39;49mjson,\n\u001B[0;32m    490\u001B[0m     headers\u001B[39m=\u001B[39;49mmerge_setting(\n\u001B[0;32m    491\u001B[0m         request\u001B[39m.\u001B[39;49mheaders, \u001B[39mself\u001B[39;49m\u001B[39m.\u001B[39;49mheaders, dict_class\u001B[39m=\u001B[39;49mCaseInsensitiveDict\n\u001B[0;32m    492\u001B[0m     ),\n\u001B[0;32m    493\u001B[0m     params\u001B[39m=\u001B[39;49mmerge_setting(request\u001B[39m.\u001B[39;49mparams, \u001B[39mself\u001B[39;49m\u001B[39m.\u001B[39;49mparams),\n\u001B[0;32m    494\u001B[0m     auth\u001B[39m=\u001B[39;49mmerge_setting(auth, \u001B[39mself\u001B[39;49m\u001B[39m.\u001B[39;49mauth),\n\u001B[0;32m    495\u001B[0m     cookies\u001B[39m=\u001B[39;49mmerged_cookies,\n\u001B[0;32m    496\u001B[0m     hooks\u001B[39m=\u001B[39;49mmerge_hooks(request\u001B[39m.\u001B[39;49mhooks, \u001B[39mself\u001B[39;49m\u001B[39m.\u001B[39;49mhooks),\n\u001B[0;32m    497\u001B[0m )\n\u001B[0;32m    498\u001B[0m \u001B[39mreturn\u001B[39;00m p\n",
-      "File \u001B[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\requests\\models.py:368\u001B[0m, in \u001B[0;36mPreparedRequest.prepare\u001B[1;34m(self, method, url, headers, files, data, params, auth, cookies, hooks, json)\u001B[0m\n\u001B[0;32m    365\u001B[0m \u001B[39m\"\"\"Prepares the entire request with the given parameters.\"\"\"\u001B[39;00m\n\u001B[0;32m    367\u001B[0m \u001B[39mself\u001B[39m\u001B[39m.\u001B[39mprepare_method(method)\n\u001B[1;32m--> 368\u001B[0m \u001B[39mself\u001B[39;49m\u001B[39m.\u001B[39;49mprepare_url(url, params)\n\u001B[0;32m    369\u001B[0m \u001B[39mself\u001B[39m\u001B[39m.\u001B[39mprepare_headers(headers)\n\u001B[0;32m    370\u001B[0m \u001B[39mself\u001B[39m\u001B[39m.\u001B[39mprepare_cookies(cookies)\n",
-      "File \u001B[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\requests\\models.py:439\u001B[0m, in \u001B[0;36mPreparedRequest.prepare_url\u001B[1;34m(self, url, params)\u001B[0m\n\u001B[0;32m    436\u001B[0m     \u001B[39mraise\u001B[39;00m InvalidURL(\u001B[39m*\u001B[39me\u001B[39m.\u001B[39margs)\n\u001B[0;32m    438\u001B[0m \u001B[39mif\u001B[39;00m \u001B[39mnot\u001B[39;00m scheme:\n\u001B[1;32m--> 439\u001B[0m     \u001B[39mraise\u001B[39;00m MissingSchema(\n\u001B[0;32m    440\u001B[0m         \u001B[39mf\u001B[39m\u001B[39m\"\u001B[39m\u001B[39mInvalid URL \u001B[39m\u001B[39m{\u001B[39;00murl\u001B[39m!r}\u001B[39;00m\u001B[39m: No scheme supplied. \u001B[39m\u001B[39m\"\u001B[39m\n\u001B[0;32m    441\u001B[0m         \u001B[39mf\u001B[39m\u001B[39m\"\u001B[39m\u001B[39mPerhaps you meant http://\u001B[39m\u001B[39m{\u001B[39;00murl\u001B[39m}\u001B[39;00m\u001B[39m?\u001B[39m\u001B[39m\"\u001B[39m\n\u001B[0;32m    442\u001B[0m     )\n\u001B[0;32m    444\u001B[0m \u001B[39mif\u001B[39;00m \u001B[39mnot\u001B[39;00m host:\n\u001B[0;32m    445\u001B[0m     \u001B[39mraise\u001B[39;00m InvalidURL(\u001B[39mf\u001B[39m\u001B[39m\"\u001B[39m\u001B[39mInvalid URL \u001B[39m\u001B[39m{\u001B[39;00murl\u001B[39m!r}\u001B[39;00m\u001B[39m: No host supplied\u001B[39m\u001B[39m\"\u001B[39m)\n",
-      "\u001B[1;31mMissingSchema\u001B[0m: Invalid URL '': No scheme supplied. Perhaps you meant http://?"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['BDQDVS', 'MAT', '2']\n"
      ]
     }
    ],
    "source": [
+    "NHATKHANG_VIE = [\n",
+    "    \n",
+    "]\n",
+    "\n",
+    "len(NHATKHANG_VIE)\n",
+    "print((LANG[0] + '/' + PATHS[1]).replace('?', '/').split('/')[0:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
     "i = 0\n",
-    "for url in AUDIO_SRCS:\n",
+    "for url in BAH_AUDIO_SRCS:\n",
     "    response = requests.get(url)\n",
-    "    file_name_segments = url.replace('?', '/').split('/')[0:2]\n",
+    "    file_name_segments = (LANG[0] + '/' + PATHS[i]).replace('?', '/').split('/')[0:3]\n",
     "    file_name = '_'.join(file_name_segments)\n",
     "    # Save the downloaded content to a file on disk\n",
     "    # LANG[0] represents the Bahnar language bible; LANG[1] represents the Vietnamese language bible\n",
-    "    with open(f'{WORK_DIR}/{LANG[0]}/{file_name_segments[0]}/{file_name}.mp3', 'wb') as f:\n",
+    "    with open(f'{WORK_DIR}/{LANG[0]}/{file_name_segments[1]}/{file_name}.wav', 'wb') as f:\n",
     "        f.write(response.content)\n",
     "    i += 1\n",
     "    # Convert the downloaded file to a desired format (e.g. WAV)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
