Scribing all the Vietnamese

--- a/bible_is/bible_is/spiders/download-audios.ipynb
+++ b/bible_is/bible_is/spiders/download-audios.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import os"
+    "import requests"
    ]
   },
   {
@@ -326,7 +325,10 @@
     "    \"https://content.cdn.dbp-prod.dbp4.org/audio/VIEBIB/VIEBIBN1DA/B06___13_Romans______VIEBIBN1DA.mp3?x-amz-transaction=9343319&Expires=1679506753&Signature=N5JOtndPhwToTyPYUBkAvWOGaTB5QAQYYYFTHfRHGmDvzv7Q~jJXjpttFv30Ry1VlRuGWJYM0Av9e9hYzJXoQOZiYnnvzPrNOcTyeKAaFAQhV-cjcEg2JAq3~P~lEZS7x10kfoJ23wFVqwdL28xFqTAdX7-w3htN6HC0TaLPdFlbOBi0hFo5J~qNozhO3oHm9mAHyTZzxEYOIlUTjMxJ6prE6XJ8VGJFWN-rMMivnC9IfJWj3j7UIFzB36a5W7sGC2SvSI6i8Yv9XTs9je61FOMsDILwWGveXRuR-mtkKUnYjzLAbRDgtH9EvvQo3g4hcqjm-eKE0aN3dvxreaxNGg__&Key-Pair-Id=APKAI4ULLVMANLYYPTLQ\",\n",
     "    \"https://content.cdn.dbp-prod.dbp4.org/audio/VIEBIB/VIEBIBN1DA/B06___14_Romans______VIEBIBN1DA.mp3?x-amz-transaction=8524674&Expires=1679506774&Signature=SEUCJW7~MmGFUiJ7bdT0Xya4queKVLwoUWzLdeUg52zZBsGk9WD4-~P-7HKpNKN-cVD-BCnLfB~d-U-fjTgM5hMBYYAokByeuV-MTcbwr-4dF5Y9Ww3j076YKlM3SfhYpnLDVY~E6ev0554V8mfJUZaWpyQ7vaZ4UuaJqxN90kBRpe3OtYtqE9LqOTahlXh7-c0AVaAJTO1eEuVACp6ViZOQXv6zHQAuWmuMDhPxwUHTK~W6PU7EjmRtn1D8qTHZojmDpV3FQkkqAHm0DYRme~RVGTEC-KjgTlnVPi2wvHDlYMB032QXHG9rbfThI1XKVepOFPTnIgfh5gARRey6cQ__&Key-Pair-Id=APKAI4ULLVMANLYYPTLQ\",\n",
     "    \"https://content.cdn.dbp-prod.dbp4.org/audio/VIEBIB/VIEBIBN1DA/B06___15_Romans______VIEBIBN1DA.mp3?x-amz-transaction=5116059&Expires=1679506886&Signature=fAs7GSY6vITPJcHGg~ZMoG3leIQ153~vcGF1ouMq3kWvzYzxdSyFgtQJZfETjH2pDHzD2mXWAmc~GSaNBaQpPO0OiJVLyWvN0xZ0HeA49rtzA~cM-ypCn0uHtoNZHz5IDC8ArROGne9Af77YOGP~epeSpj2EYRVVxiAO0tV0Pfe7vkmq5O5XaOEV1YKU~J3D65fUfk9QRqv7nYtawGfIXRDhSEkOgB632aXZymK1eLSmYv6GuML6Z2p2gebF2IWNYj4NjZpp~GB8XuTHrMivZIKuapiosXWO-GEDv2gOuksCHcXlbqTLIYtKaIr0l8Ma12Zz3a4~Xx3mUfjpK2zufA__&Key-Pair-Id=APKAI4ULLVMANLYYPTLQ\",\n",
-    "    \"https://content.cdn.dbp-prod.dbp4.org/audio/VIEBIB/VIEBIBN1DA/B06___16_Romans______VIEBIBN1DA.mp3?x-amz-transaction=9105627&Expires=1679506906&Signature=GptrL2FTOtm00rGY2L583mQFS4IFvS0btSksKQkjjwDiv8RkuTHQhFuI~5PLbqWA-zq7toFvMnjT6zWwPcaE-fZMnO-uUQQcs1jwha2RpnDHxiFrnCZR0l~yFPPgwdLztU-~hSkQep~8yywFsLx8ZaPwc17WQFOcUNSvTFjeG51D~60QxCAhB0UGGoiAYPiUSh9ALXL-CYT-W70Dvh4pAsizTpyiBV7OOs3gpBd~2L0mduvrNS8re-viRS2h1RqgSZvaXl1LqvjVkYvNvwq3CuxVwmoMjBMY~QvED8-gKFAfw18hi9RhBw3eNTBN~3Xw-KcC5PHXYy9zEP8JBRsI0g__&Key-Pair-Id=APKAI4ULLVMANLYYPTLQ\"\n",
+    "    \"https://content.cdn.dbp-prod.dbp4.org/audio/VIEBIB/VIEBIBN1DA/B06___16_Romans______VIEBIBN1DA.mp3?x-amz-transaction=9105627&Expires=1679506906&Signature=GptrL2FTOtm00rGY2L583mQFS4IFvS0btSksKQkjjwDiv8RkuTHQhFuI~5PLbqWA-zq7toFvMnjT6zWwPcaE-fZMnO-uUQQcs1jwha2RpnDHxiFrnCZR0l~yFPPgwdLztU-~hSkQep~8yywFsLx8ZaPwc17WQFOcUNSvTFjeG51D~60QxCAhB0UGGoiAYPiUSh9ALXL-CYT-W70Dvh4pAsizTpyiBV7OOs3gpBd~2L0mduvrNS8re-viRS2h1RqgSZvaXl1LqvjVkYvNvwq3CuxVwmoMjBMY~QvED8-gKFAfw18hi9RhBw3eNTBN~3Xw-KcC5PHXYy9zEP8JBRsI0g__&Key-Pair-Id=APKAI4ULLVMANLYYPTLQ\",\n",
+    "\n",
+    "    \"https://content.cdn.dbp-prod.dbp4.org/audio/VIEBIB/VIEBIBN1DA/B07___01_1CorinthiansVIEBIBN1DA.mp3?x-amz-transaction=5641889&Expires=1679538749&Signature=KbLopU6ImT0b6W9sTRG0F3aWbkvTpODLdCmWKs-Evx796RVEG~keN0Cd48afKTB0c-rbKbeAsgukuwzK8FUYgYmpNQB3nXnxbbkr3QVrxZ4muVmiZddSjRkdUsSGZvnt2IuoY5GQei1EvJQw3PewAJKpXpbjJR6~v95Es6XlREtKvHylIV6mvT4vOz9jJnL4tUNKHyA2yM72UCBRnGuK8NCQ8jHyvKns43R2Vt0s2s9hNyEOdhN4kGze1FOEl~SvyoJj7Ve7QQ7Posq210jXxBLTSUcvNOrUTETpkFpOxA59HRRtCiVrCIb6fpL2dGrrHtcHLv9Dbhk3JpfSyV3Y1A__&Key-Pair-Id=APKAI4ULLVMANLYYPTLQ\",\n",
+    "    \n",
     "]\n",
     "\n",
     "len(NHATKHANG_VIE)\n"
